# Rapicorn
# Copyright (C) 2010 Tim Janik
## GNU Lesser General Public License version 2 or any later version.
include $(top_srcdir)/Makefile.decl

PY_FILES	= tuthello.py

docdir        	= ${datarootdir}/doc/rapicorn@RAPICORN_RELEASE@
tutorialdir   	= ${docdir}/tutorial
tutorial_DATA	= $(PY_FILES)
EXTRA_DIST     += $(PY_FILES)
